# TimeFlowCodec

./: .gitignore  LICENSE  Makefile  README.md  bibliography.bib  build_mac.sh  build_win.bat  gui.py  main.tex  pyproject.toml  requirements.txt  timeflowcodec_gui.spec
.github/workflows/: ci.yml
TimeFlowCodecPixel/: LICENSE  README.md  gui.py  timeflowcodec_gui.spec
TimeFlowCodecPixel/examples/: tfc_compress.py  tfc_decompress.py
TimeFlowCodecPixel/tests/: test_encode_decode.py  test_models.py
TimeFlowCodecPixel/timeflowcodec/: __init__.py  constants.py  decoder.py  encoder.py  format.py  models.py  utils.py
TimeFlowCodecRGB/: README.md  build_mac.sh
TimeFlowCodecRGB/timeflowcodec/: decoder.py  format.py  models.py  utils.py
appendices/: appendixA.tex  appendixB.tex  appendixC.tex
chapters/: abstract.tex  acknowledgments.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  chapter6.tex  chapter7.tex  chapter8.tex  chapter9.tex
clips/: README.md
demo_assets/: demo_input.tfc
examples/: tfc_compress.py  tfc_decompress.py
tests/: test_encode_decode.py  test_format_v3.py  test_gui_helpers.py  test_macbook_profile.py  test_matrix_mode.py  test_models.py  test_presets_and_zstd.py  test_smoke_memory.py  test_version_cli.py
timeflowcodec/: __init__.py  bench.py  cli.py  constants.py  decoder.py  encoder.py  format.py  profile.py  utils.py  version.py
